fix(collections): collection properties still clipped in list/grid view

--- a/apps/client/src/widgets/collections/legacy/ListOrGridView.css
+++ b/apps/client/src/widgets/collections/legacy/ListOrGridView.css
@@ -1,5 +1,5 @@
 .note-list {
-    overflow: hidden;
+    overflow: visible;
     position: relative;
     height: 100%;
 }
